<resources>
    <string name="app_name">PhonePark</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint_text"><font size="14">Email Address</font></string>
    <string name="password_hint_text"><font size="14">Password</font></string>
    <string name="forgot_password"><u>forgot password?</u></string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup"><u>Sign up</u></string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="first_name"><font size="14">First Name</font></string>
    <string name="last_name"><font size="14">Last Name</font></string>
    <string name="email_address"><font size="14">Email Address</font></string>
    <string name="password"><font size="14">Password(6 or more characters)</font></string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="phonepark">PhonePark</string>
    <string name="pyla">Pyla</string>
    <string name="register_a_car">Register a car</string>
    <string name="year"><font size="14">Year</font></string>
    <string name="registration_number"><font size="14">Registration Number</font></string>
    <string name="submit">Submit</string>
    <string name="model"><font size="14">Model</font></string>
    <string name="make"><font size="14">Make</font></string>
    <string name="hours">hours</string>
    <string name="start_time">startTime</string>
    <string name="minutes">minutes</string>

</resources>
