<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".StartUp.LogIn"
    >


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardBackgroundColor="@color/colorWhiteBar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="30dp"
                android:text="@string/sign_in"
                android:textColor="#000000"
                android:textSize="30sp"
                />

            <ProgressBar
                android:id="@+id/progressBarSignUp"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />


            <EditText
                android:id="@+id/loginEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/back"
                android:ems="10"
                android:hint="@string/email_hint_text"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <EditText
                android:id="@+id/logInPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/back"
                android:ems="10"
                android:hint="@string/password_hint_text"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/log_in"
                android:textSize="20sp"
                android:textColor="@color/colorWhiteBar"
                android:textAllCaps="false"
               />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    android:layout_marginStart="3dp"
                    android:id="@+id/signUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signup"
                    android:clickable="true"
                    android:focusable="true"
                    />
            </LinearLayout>

        </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>
</FrameLayout>