<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartUp.SignUp">




    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardBackgroundColor="@color/colorWhiteBar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="30dp"
                android:text="@string/register"
                android:textColor="#000000"
                android:textSize="30sp"
                />

            <ProgressBar
                android:id="@+id/progressBarSignUp"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/back"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/back"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textSize="20sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/back"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/back"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>


            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhiteBar"
                android:clickable="true"
                android:textAllCaps="false"
                android:textSize="20sp"
                />



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>



            <Button
                android:id="@+id/continueWithGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorWhiteBar"
                android:text="@string/continue_with_google"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:textAllCaps="false"
                />


        </LinearLayout>

    </ScrollView>

    </android.support.v7.widget.CardView>

</FrameLayout>