<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.RegisterCarFragment"
    >



    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardBackgroundColor="@color/colorWhiteBar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:orientation="vertical">




                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:textSize="25sp"
                    android:text="Register car details"/>


                <EditText
                    android:id="@+id/register_a_car_make"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back"
                    android:ems="10"
                    android:hint="@string/make"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"/>

                <EditText
                    android:id="@+id/register_a_car_model"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/back"
                    android:ems="10"
                    android:hint="@string/model"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"/>


                <Spinner
                    android:id="@+id/colourSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/back"
                    />

                <EditText
                    android:id="@+id/register_a_car_year"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/back"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/year"
                    android:textSize="20sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    />

                <EditText
                    android:id="@+id/register_a_car_registration_number"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/back"
                    android:inputType="text"
                    android:ems="10"
                    android:hint="@string/registration_number"
                    android:textSize="20sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    />


                <ProgressBar
                    android:id="@+id/progressBarRegisterCar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <Button
                    android:id="@+id/register_car_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/submit"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhiteBar"
                    android:textAllCaps="false"
                    android:layout_marginBottom="30dp"
                    />






            </LinearLayout>
        </ScrollView>


    </android.support.v7.widget.CardView>
</FrameLayout>